--- a/_posts/2013-07-18-coralcdn.markdown
+++ b/_posts/2013-07-18-coralcdn.markdown
@@ -3,8 +3,6 @@ layout: post
 title: "CoralCDN"
 date: 2013-07-18 15:00
 comments: true
-categories:
-published: true
 ---
 
 ## Why did we read this paper?
@@ -22,7 +20,7 @@ CoralCDN is a content distribution network (CDN) built on top of the Coral
 indexing service.  The system can be described in its component parts: Coral
 DNS services, Coral HTTP proxy, and the Coral indexing service.
 
-## DNS Functions
+### DNS Functions
 
 Many of CoralCDN's processes attempt to preserve locality in order to keep
 latency low. This starts with the DNS lookup by the end user's browser.
@@ -39,7 +37,7 @@ are returned to the end user are available, since a bad HTTP proxy will fail
 the user's request. The DNS servers can do this by synchronously checking a
 proxy's status with an RPC prior to releasing the DNS response.
 
-## The HTTP Proxy
+### The HTTP Proxy
 
 The driving goal of the system is to shield origin servers from request
 stampedes. The Coral proxies therefore attempt to find the content within
@@ -48,11 +46,11 @@ retrieval from the origin server, it inserts a short lived record into the
 Coral index so any additional servers that want the object will not
 simultaneously contact the origin.
 
-## The Indexing Service
+### The Indexing Service
 
-One of the authors' stated contributions of this work is the indexing system
+One of the authors' stated contributions of this work is the indexing system,
 including a *distributed sloppy hash table* (DSHT).  Each node is given a 160 bit ID
-and holds key/value pairs with keys that are 'close' to the node's ID.
+and holds key/value pairs with keys that are "close" to the node's ID.
 Additionally, each node maintains a routing table to other nodes. On a put or
 get, the request can be routed to successively closer nodes to toward the
 closest node.
@@ -62,8 +60,8 @@ the closest node. The put process is completed in two phases. The first is a
 collection of hops to get to the closest node and forms a stack from the list
 of nodes. This phase ends when the storing node reaches the closest node or
 when it reaches one that is *full* and *loaded*. A full node is one that
-already stores *l* values for that key. A loaded node is one that is receiving
-more than *b* requests per minute.  In the second phase, the storing node
+already stores $$l$$ values for that key. A loaded node is one that is receiving
+more than $$b$$ requests per minute.  In the second phase, the storing node
 attempts to place the value at the node on top of the stack. If that store
 fails for some reason, the storer pops the stack and tries again.
 
@@ -71,7 +69,7 @@ Nodes are arranged in clusters based on their average pairwise latency. If that
 latency is below a certain threshold, the cluster is said to be part of a
 specific level. A node can be part of multiple clusters but uses
 the same ID in each. This clustering allows a sequential search for a target
-value, beginning with low latency 'close' nodes and only proceeding to slower
+value, beginning with low latency "close" nodes and only proceeding to slower
 levels if needed.
 
 ## Comments
